[package]
name = "elfo-protocol-core"
version = "0.1.0"
description = "A subscription protocol on solana"
edition = "2018"
license = "Apache-2.0"
homepage = "https://eflo.cc/"
repository = "https://github.com/elfo-protocol/elfo-core/"
documentation = "https://elfo.cc/docs"
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "elfo_protocol_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version="0.22.0", features=["init-if-needed"]}
anchor-spl = "0.22.0"
